GNOME Bugzilla – Bug 767424
flvdemux: Fix unref assertion failure
Last modified: 2016-06-10 12:04:32 UTC
flvdemux: Fix unref assertion failure Fix unref assertion failure
Created attachment 329426 [details] [review] flvdemux: Fix unref assertion failure
How can we reproduce this issue ? Do you have some test we can run ?
Review of attachment 329426 [details] [review]: Looks good.
Attachment 329426 [details] pushed as 4e23d20 - flvdemux: Fix unref assertion failure
Merged into 1.8 branch as 7eb46b87fe5a31668dcf8ad7247625c4df8acf1a, will make it for 1.8.2.
(In reply to Nicolas Dufresne (stormer) from comment #2) > How can we reproduce this issue ? Do you have some test we can run ? I hope to share the file, but cannot due to security policy... Sorry...
(In reply to Seungha Yang from comment #6) > (In reply to Nicolas Dufresne (stormer) from comment #2) > > How can we reproduce this issue ? Do you have some test we can run ? > > I hope to share the file, but cannot due to security policy... Sorry... Maybe you could share the string ? Basically, there is a date in your tags that GStreamer fail to parse. It's not the bug you filed, but it might be a bug.
Created attachment 329521 [details] Issue file
(In reply to Nicolas Dufresne (stormer) from comment #7) > (In reply to Seungha Yang from comment #6) > > (In reply to Nicolas Dufresne (stormer) from comment #2) > > > How can we reproduce this issue ? Do you have some test we can run ? > > > > I hope to share the file, but cannot due to security policy... Sorry... > > Maybe you could share the string ? Basically, there is a date in your tags > that GStreamer fail to parse. It's not the bug you filed, but it might be a > bug. Now I can share the issue file :) Please refer to attached flv.flv file.
Great thanks. I extracted the string. "Thu May 11 15:57:46 2006 " Except for the space at the end, it seems all fine, and should be parsable. I'll file a bug. Again, thank you.