flvdemux: Fix unref assertion failure

Fix unref assertion failure

https://bugzilla.gnome.org/show_bug.cgi?id=767424